--- a/app/src/main/res/layout/fragment_electric_motor.xml
+++ b/app/src/main/res/layout/fragment_electric_motor.xml
@@ -29,6 +29,20 @@
                 app:layout_collapseMode="parallax">
 
                 <TextView
+                    android:id="@+id/text_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="#00214763"
+                    android:fontFamily="@font/ru_hero"
+                    tools:hint="20.12.1985 17:15"
+                    android:alpha="0.5"
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <TextView
                     android:id="@+id/textTitleName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -997,6 +1011,15 @@
                     app:layout_constraintTop_toBottomOf="@+id/text_filter" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="64dp"
+                android:indeterminateTint="@color/text_recycle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycle_electric_motor"
