--- a/app/src/main/res/layout/item_swipe_electric_motor.xml
+++ b/app/src/main/res/layout/item_swipe_electric_motor.xml
@@ -181,16 +181,19 @@
                     app:layout_constraintVertical_bias="0.0" />
 
                 <com.google.android.material.card.MaterialCardView
-                    app:strokeWidth="2dp"
                     android:id="@+id/name_electric_motor"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
                     app:cardCornerRadius="4dp"
                     app:cardElevation="4dp"
+                    app:layout_constrainedWidth="true"
+                    app:layout_constraintBottom_toTopOf="@+id/text_category"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:strokeWidth="2dp">
 
                     <TextView
                         android:id="@+id/text_name_block_electric_motor"
@@ -198,10 +201,11 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
                         android:fontFamily="@font/ru_hero"
+                        android:hint=""
                         android:padding="2dp"
+                        android:text="Вакуумный насос для\n разгрузки кислоты  №1"
                         android:textColor="@color/text_recycle"
                         android:textIsSelectable="false"
-                        android:hint=""
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </com.google.android.material.card.MaterialCardView>
@@ -221,37 +225,22 @@
                     android:id="@+id/text_shema_assembly"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="@string/cooling_tower"
                     android:fontFamily="@font/ru_hero"
+                    android:hint="@string/cooling_tower"
                     android:scrollHorizontally="false"
                     android:textColor="#6C889C"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@+id/name_electric_motor"
-                    app:layout_constraintTop_toBottomOf="@+id/text_category" />
+                    app:layout_constraintBottom_toBottomOf="@+id/text_tok"
+                    app:layout_constraintStart_toEndOf="@+id/imageView" />
 
-
-                <TextView
-                    android:id="@+id/indexSection"
-                    android:layout_width="0dp"
-                    android:layout_height="21dp"
-                    android:textColor="#6C889C"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:alpha="0.8"
-                    android:padding="2dp"
-                    android:text="K3-1"
-                    android:fontFamily="@font/ru_hero"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
                 <TextView
                     android:id="@+id/text_rep"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/ru_hero"
                     android:padding="2dp"
                     android:scrollHorizontally="false"
@@ -266,29 +255,29 @@
                     android:id="@+id/text_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="8dp"
                     android:fontFamily="@font/ru_hero"
-                    android:scrollHorizontally="false"
                     android:hint="ТГ-5"
+                    android:scrollHorizontally="false"
                     android:textColor="#6C889C"
                     android:textSize="16sp"
                     android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="@+id/name_electric_motor"
-                    app:layout_constraintTop_toBottomOf="@+id/name_electric_motor" />
+                    app:layout_constraintBottom_toTopOf="@+id/text_shema_assembly"
+                    app:layout_constraintStart_toEndOf="@+id/imageView" />
 
                 <TextView
                     android:id="@+id/text_power"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="8dp"
                     android:fontFamily="@font/ru_hero"
-                    android:scrollHorizontally="false"
                     android:hint="150 кВт"
+                    android:scrollHorizontally="false"
                     android:textColor="#6C889C"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
-                    app:layout_constraintTop_toTopOf="@+id/name_electric_motor" />
+                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
 
                 <TextView
@@ -321,20 +310,11 @@
                     android:id="@+id/imageView3"
                     android:layout_width="56dp"
                     android:layout_height="48dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/imageView2"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/motor_5686786" />
-
-                <ImageView
-                    android:id="@+id/imageShema"
-                    android:layout_width="8dp"
-                    android:layout_height="8dp"
-                    android:layout_marginBottom="4dp"
-                    app:layout_constraintBottom_toTopOf="@+id/imageView3"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
-                    app:srcCompat="@drawable/baseline_circle_green" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
