--- a/app/src/main/res/layout/item_swipe_electric_motor.xml
+++ b/app/src/main/res/layout/item_swipe_electric_motor.xml
@@ -21,7 +21,6 @@
             app:cardBackgroundColor="@color/backgroundItem"
             app:cardCornerRadius="16dp"
             app:cardElevation="2dp"
-            app:cardPreventCornerOverlap="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -188,12 +187,11 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
+                    app:cardElevation="2dp"
                     app:layout_constrainedWidth="true"
                     app:layout_constraintBottom_toTopOf="@+id/text_category"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:strokeWidth="2dp">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/text_name_block_electric_motor"
