--- a/app/src/main/res/layout/fragment_electric_motor.xml
+++ b/app/src/main/res/layout/fragment_electric_motor.xml
@@ -115,7 +115,7 @@
         android:contentDescription="@string/close"
         android:src="@drawable/baseline_close_24"
         android:visibility="gone"
-        app:backgroundTint="@color/text_recycle"
+        app:backgroundTint="@color/floatingActionButton"
         app:borderWidth="4dp"
         app:elevation="4dp"
         app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
@@ -1113,9 +1113,9 @@
                 android:id="@+id/recycle_electric_motor"
                 android:layout_width="match_parent"
                 android:layout_height="1000dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="0dp"
                 android:fadeScrollbars="false"
-                android:paddingBottom="10dp"
+                android:paddingBottom="8dp"
                 android:scrollbarSize="5dp"
                 android:scrollbarThumbVertical="@color/text_recycle"
                 android:scrollbars="vertical"
