--- a/app/src/main/res/layout/fragment_open_switchgear.xml
+++ b/app/src/main/res/layout/fragment_open_switchgear.xml
@@ -136,7 +136,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scrollbarSize="5dp"
-            android:scrollbarThumbVertical="@color/text_recycle"
+            android:scrollbarThumbVertical="@color/floatingActionButton"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
         </LinearLayout>
