--- a/app/src/main/res/layout/fragment_transformer_of_own_needs.xml
+++ b/app/src/main/res/layout/fragment_transformer_of_own_needs.xml
@@ -142,12 +142,19 @@
         android:background="@color/white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycle_tsn"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2" />
+            android:layout_height="match_parent">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycle_tsn"
+                android:layout_width="match_parent"
+                android:layout_height="800dp"
+                android:scrollbarSize="5dp"
+                android:scrollbarThumbVertical="@color/floatingActionButton"
+                android:scrollbars="vertical"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="2" />
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
