--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="name_devices_appbar">#A7D0EF</color>
     <color name="red_schema">#C9322F</color>
     <color name="floatingActionButton">#265271</color>
+    <color name="text_input_assembly">#EFD2A7</color>
 </resources>
