--- a/app/src/main/res/drawable/separator.xml
+++ b/app/src/main/res/drawable/separator.xml
@@ -2,8 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="45.0" android:endColor="@color/floatingActionButton" android:startColor="@color/text_recycle" android:type="linear" />
-
+            <gradient android:angle="135.0" android:endColor="#D0E7F6" android:startColor="@color/chip_appbar" android:type="linear" />
         </shape>
     </item>
 </selector>
