--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -22,7 +22,19 @@ tools:context=".BlankFragment">
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="33dp"
+            android:text="@string/hvo_other"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <TextView
+            android:id="@+id/textView"
             style="@android:style/Widget.DeviceDefault.TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
