--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -123,7 +123,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-            android:id="@+id/fragment_layout"
+            android:id="@+id/recycler_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/separator_gradient_radius_20"
