--- a/app/src/main/res/layout/fragment_block_generator_transformer.xml
+++ b/app/src/main/res/layout/fragment_block_generator_transformer.xml
@@ -61,10 +61,11 @@ tools:context=".blockGeneratorTransformer.BlockGeneratorTransformer">
 
             <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="41dp"
-                android:layout_height="35dp"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
                 android:layout_marginEnd="24dp"
-                android:src="@drawable/images"
+                android:background="#00567993"
+                android:src="@drawable/images1"
                 app:layout_constraintBottom_toBottomOf="@+id/textTitleName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textTitleName" />
