--- a/app/src/main/res/layout/fragment_open_switchgear.xml
+++ b/app/src/main/res/layout/fragment_open_switchgear.xml
@@ -46,6 +46,7 @@
 
                     <com.google.android.material.chip.Chip
                         style="@style/Widget.MaterialComponents.Chip.Filter"
+                        android:id="@+id/chip_ory"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="true"
@@ -58,6 +59,7 @@
                         app:rippleColor="@color/text_recycle" />
 
                     <com.google.android.material.chip.Chip
+                        android:id="@+id/chip_ory_110"
                         style="@style/Widget.MaterialComponents.Chip.Filter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -70,6 +72,7 @@
                         app:rippleColor="@color/text_recycle" />
 
                     <com.google.android.material.chip.Chip
+                        android:id="@+id/chip_ory_220"
                         style="@style/Widget.MaterialComponents.Chip.Filter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -109,10 +112,11 @@
 
                 <ImageView
                     android:id="@+id/imageView5"
-                    android:layout_width="41dp"
-                    android:layout_height="35dp"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
                     android:layout_marginEnd="24dp"
-                    android:src="@drawable/images"
+                    android:background="#00567993"
+                    android:src="@drawable/images1"
                     app:layout_constraintBottom_toBottomOf="@+id/textTitleName"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/textTitleName" />
@@ -135,7 +139,7 @@
             android:id="@+id/recycle_lep"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scrollbarSize="5dp"
+            android:scrollbarSize="2dp"
             android:scrollbarThumbVertical="@color/floatingActionButton"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
