--- a/app/src/main/res/layout/fragment_transformer_of_own_needs.xml
+++ b/app/src/main/res/layout/fragment_transformer_of_own_needs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -46,6 +47,7 @@
 
                     <com.google.android.material.chip.Chip
                         style="@style/Widget.MaterialComponents.Chip.Filter"
+                        android:id="@+id/chip_all"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="true"
@@ -59,6 +61,7 @@
 
                     <com.google.android.material.chip.Chip
                         style="@style/Widget.MaterialComponents.Chip.Filter"
+                        android:id="@+id/chip_voltage_04"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="false"
@@ -71,6 +74,7 @@
                         app:rippleColor="@color/text_recycle" />
 
                     <com.google.android.material.chip.Chip
+                        android:id="@+id/chip_voltage_315"
                         style="@style/Widget.MaterialComponents.Chip.Filter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -83,6 +87,7 @@
                         app:rippleColor="@color/text_recycle" />
 
                     <com.google.android.material.chip.Chip
+                        android:id="@+id/chip_voltage_63"
                         style="@style/Widget.MaterialComponents.Chip.Filter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -122,10 +127,11 @@
 
                 <ImageView
                     android:id="@+id/imageView5"
-                    android:layout_width="41dp"
-                    android:layout_height="35dp"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
                     android:layout_marginEnd="24dp"
-                    android:src="@drawable/images"
+                    android:background="#00567993"
+                    android:src="@drawable/images1"
                     app:layout_constraintBottom_toBottomOf="@+id/textTitleName"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/textTitleName" />
@@ -150,7 +156,7 @@
                 android:id="@+id/recycle_tsn"
                 android:layout_width="match_parent"
                 android:layout_height="800dp"
-                android:scrollbarSize="5dp"
+                android:scrollbarSize="2dp"
                 android:scrollbarThumbVertical="@color/floatingActionButton"
                 android:scrollbars="vertical"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
