--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/openSwitchgear"
-        android:title="@string/open_switchgear"
+        android:id="@+id/home"
+        android:title="ЛЭП"
         android:enabled="true"
         android:icon="@drawable/klipartz_com3"/>
-
     <item
         android:id="@+id/transformerOfOwnNeeds"
-        android:title="@string/transformer_of_own_needs"
+        android:title="ТСН"
         android:enabled="true"
         android:icon="@drawable/transformer_1"/>
-
     <item
         android:id="@+id/blockGeneratorTransformer"
-        android:title="@string/blockGenerator_transformer"
+        android:title="Блок ГТ"
         android:enabled="true"
         android:icon="@drawable/generator_1"/>
 
@@ -22,12 +20,12 @@
         android:id="@+id/electricMotorFragment"
         android:title="@string/electric_motors"
         android:enabled="true"
-        android:icon="@drawable/motor_5686786"/>
+        android:icon="@drawable/electric_motor_2479547"/>
 
     <item
         android:id="@+id/electricalAssemblyFragment"
         android:title="@string/electrical_assembly"
         android:enabled="true"
-        android:icon="@drawable/baseline_bolt_24"/>
+        android:icon="@drawable/high_voltage_8107242"/>
 
 </menu>
