--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,28 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/openSwitchgear">
+    app:startDestination="@id/home">
 
     <fragment
         android:id="@+id/blankFragment"
         android:name="com.example.svetlogorskchpp.BlankFragment"
         android:label="fragment_blank"
         tools:layout="@layout/fragment_blank" />
-    <fragment
-        android:id="@+id/openSwitchgear"
-        android:name="com.example.svetlogorskchpp.openSwitchgear.OpenSwitchgear"
-        android:label="fragment_open_switchgear"
-        tools:layout="@layout/fragment_open_switchgear" />
-    <fragment
-        android:id="@+id/transformerOfOwnNeeds"
-        android:name="com.example.svetlogorskchpp.transformerOfOwnNeeds.TransformerOfOwnNeeds"
-        android:label="fragment_transformer_of_own_needs"
-        tools:layout="@layout/fragment_transformer_of_own_needs" />
-    <fragment
-        android:id="@+id/blockGeneratorTransformer"
-        android:name="com.example.svetlogorskchpp.blockGeneratorTransformer.BlockGeneratorTransformer"
-        android:label="fragment_block_generator_transformer"
-        tools:layout="@layout/fragment_block_generator_transformer" />
+
     <fragment
         android:id="@+id/electricMotorFragment"
         android:name="com.example.svetlogorskchpp.electricMotor.ElectricMotorFragment"
@@ -46,5 +32,27 @@
     <dialog
         android:id="@+id/dialogFragmentAssembly"
         android:name="com.example.svetlogorskchpp.electricalAssembly.DialogFragmentAssembly"
-        android:label="DialogFragmentAssembly" />
+        tools:layout="@layout/dialog_fragment_assembly"
+        android:label="DialogFragmentAssembly" >
+        <argument
+            android:name="idElectricalAssembly"
+            app:argType="string" />
+    </dialog>
+    <include app:graph="@navigation/home" />
+    <fragment
+        android:id="@+id/openSwitchgear2"
+        android:name="com.example.svetlogorskchpp.openSwitchgear.OpenSwitchgear"
+        android:label="fragment_open_switchgear"
+        tools:layout="@layout/fragment_open_switchgear" />
+    <fragment
+        android:id="@+id/blockGeneratorTransformer"
+        android:name="com.example.svetlogorskchpp.blockGeneratorTransformer.BlockGeneratorTransformer"
+        android:label="fragment_block_generator_transformer"
+        tools:layout="@layout/fragment_block_generator_transformer" />
+    <fragment
+        android:id="@+id/transformerOfOwnNeeds"
+        android:name="com.example.svetlogorskchpp.transformerOfOwnNeeds.TransformerOfOwnNeeds"
+        android:label="fragment_transformer_of_own_needs"
+        tools:layout="@layout/fragment_transformer_of_own_needs" />
+
 </navigation>
