--- a/app/src/main/res/layout/fragment_home_page_small.xml
+++ b/app/src/main/res/layout/fragment_home_page_small.xml
@@ -37,7 +37,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="1.0"
-
+                    app:srcCompat="@drawable/img_20"
                     app:strokeColor="@color/text_recycle_smile"
                     app:strokeWidth="0dp" />
 
@@ -76,15 +76,15 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
         android:layout_marginTop="-16dp"
         android:background="#00214763"
+        android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:background="#00214763"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#00214763">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constrain_material_card"
@@ -274,7 +274,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="24dp"
-                    app:cardBackgroundColor="#D2E4F1"
+                    app:cardBackgroundColor="@color/chip_appbar"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -287,33 +287,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <TextView
-                            android:id="@+id/textTitleZeroVision"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="16dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginBottom="16dp"
-                            android:background="#00214763"
-                            android:fontFamily="@font/ru_hero"
-                            android:gravity="center"
-                            android:text="@string/name_zero_vision"
-                            android:textColor="@color/floatingActionButton"
-                            android:textSize="20sp"
-                            android:textStyle="bold"
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:layout_width="128dp"
+                            android:layout_height="128dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/shapeableImageViewZeroVision"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/vision_zero_text" />
 
                         <com.google.android.material.imageview.ShapeableImageView
                             android:id="@+id/shapeableImageViewZeroVision"
-                            android:layout_width="123dp"
-                            android:layout_height="123dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginBottom="8dp"
+                            android:layout_width="112dp"
+                            android:layout_height="112dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginBottom="16dp"
                             android:scaleType="centerCrop"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
